--- a/app/styles/_fonts.sass
+++ b/app/styles/_fonts.sass
@@ -29,6 +29,7 @@
 	font-feature-settings: 'liga'
 	-webkit-font-smoothing: antialiased
 	font-smoothing: antialiased
+	+no-user-select
 
 .material-icons
 	font-family: 'Material Icons'
