--- a/app/styles/_vars.sass
+++ b/app/styles/_vars.sass
@@ -7,7 +7,10 @@ $tag-counter: #677385
 $actionbtn-bg: #757d8c
 $actionbar-bg: #6e7686
 $blue: #65b8d4
+$dark-blue: darken($blue, 6%)
+$red: #f25c5c
+$dark-red: darken($red, 6%)
 $selected: #edf0f5
 
 $sidebar-width: 300px
-$actionbar-height: 80px
+$actionbar-height: 75px
