--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -1,7 +1,9 @@
-@import 'fonts'
 @import 'vars'
+@import 'mixins'
+@import 'fonts'
 @import 'sidebar'
 @import 'actionbar'
+@import 'addDialog'
 
 body, html
 	background-color: $white
