--- a/app/styles/_vars.sass
+++ b/app/styles/_vars.sass
@@ -1,5 +1,6 @@
 $white: #fff
 $text-light: #f0f9f9
+$text-med: #5c687a
 $text-dark: #2e3a4b
 $sidebar-bg: #576375
 $tag-bg: #485364
@@ -11,6 +12,7 @@ $dark-blue: darken($blue, 6%)
 $red: #f25c5c
 $dark-red: darken($red, 6%)
 $selected: #edf0f5
+$line: #d1d5dd
 
 $sidebar-width: 300px
 $actionbar-height: 75px
