--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -4,6 +4,7 @@
 @import 'sidebar'
 @import 'actionbar'
 @import 'addDialog'
+@import 'downloads'
 
 body, html
 	background-color: $white
@@ -15,3 +16,5 @@ body, html
 	display: grid
 	grid-template-columns: $sidebar-width auto
 	grid-template-rows: $actionbar-height auto
+	height: 100vh
+	width: 100%
