--- a/app/styles/_sidebar.sass
+++ b/app/styles/_sidebar.sass
@@ -1,5 +1,25 @@
 .sidebar
 	background-color: $sidebar-bg
 	width: 100%
-	height: 100vh
+	height: calc(100vh - 20px)
 	grid-row: 1 / 3
+	padding-top: 20px
+	.label-container
+		width: 80%
+		margin-left: 10%
+		height: 36px
+		font-family: 'Source Sans Pro'
+		font-weight: 900
+		line-height: 36px
+		color: $text-light
+		display: grid
+		grid-template-columns: auto 36px
+		&:hover
+			cursor: pointer
+			background-color: darken($sidebar-bg, 2%)
+		.label-text
+			text-indent: 12px
+		.label-counter
+			background-color: $tag-counter
+			width: 36px
+			text-align: center
